Server/src/main/kotlin/com/example/p2p_stock/errors/TaskException.kt
package com.example.p2p_stock.errors

class NotFoundTaskException(message:String):RuntimeException(message)
class IllegalAccessTaskException(message:String):RuntimeException(message)
